[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>", "Philipp Oppermann <dev@phil-opp.com>"]
description = "Work in progress embedded library; pre-release for single issue."
license = "MIT"
name = "embedded"
version = "0.3.0"

[dependencies]
bit_field = "0.4.0"
bitflags = "0.7.0"
volatile = "0.2.0"

[dependencies.arrayvec]
version = "0.3.20"
default-features = false

[dependencies.compiler-builtins-snapshot]
version = "0.0.20161008+c56faf22abb39724008148d58f12bcd43b6d236b"
features = ["memcpy"]

[features]
default = ["panic-fmt", "unwind-cpp"]
panic-fmt = []
unwind-cpp = []
